Fix "ts" no-XXX options, document two TLS options
Reviewed-by: Matt Caswell <matt@openssl.org>
Reviewed-by: Dmitry Belyavskiy <beldmit@gmail.com>
Reviewed-by: Matthias St. Pierre <Matthias.St.Pierre@ncp-e.com>
(Merged from https://github.com/openssl/openssl/pull/10191)

--- a/doc/man3/SSL_CONF_cmd.pod
+++ b/doc/man3/SSL_CONF_cmd.pod
@@ -193,7 +193,11 @@ the B<padding> must be >1 or <=16384.
 
 =item B<-debug_broken_protocol>
 
+Ignored.
+
 =item B<-no_middlebox>
+
+Turn off "middlebox compatibility", as described below.
 
 =back
 
