fixup! Add support for DH 'modp' group parameters (RFC 3526)

--- a/doc/man3/DH_new_by_nid.pod
+++ b/doc/man3/DH_new_by_nid.pod
@@ -8,7 +8,7 @@ DH_new_by_nid, DH_get_nid - get or find DH named parameters
 
  #include <openssl/dh.h>
  DH *DH_new_by_nid(int nid);
- int *DH_get_nid(const DH *dh);
+ int *DH_get_nid(DH *dh);
 
 =head1 DESCRIPTION
 
