--- a/doc/man3/EVP_PKEY_set1_RSA.pod
+++ b/doc/man3/EVP_PKEY_set1_RSA.pod
@@ -105,10 +105,12 @@ and EVP_PKEY_assign_SIPHASH() are implemented as macros.
 EVP_PKEY_assign_EC_KEY() looks at the curve name id to determine if
 the passed B<EC_KEY> is an L<SM2(7)> key, and will set the B<EVP_PKEY>
 type to B<EVP_PKEY_SM2> in that case, instead of B<EVP_PKEY_EC>.
-This B<EVP_PKEY> type can be switched to B<EVP_PKEY_EC> with a call to
-EVP_PKEY_set_alias_type() if it's desirable to do a normal EC
+
+It's possible to switch back and forth between the types B<EVP_PKEY_EC>
+and B<EVP_PKEY_SM2> with a call to EVP_PKEY_set_alias_type() on keys
+assigned with this macro if it's desirable to do a normal EC
 computations with the SM2 curve instead of the special SM2
-computations.
+computations, and vice versa.
 
 Most applications wishing to know a key type will simply call
 EVP_PKEY_base_id() and will not care about the actual type:
