--- a/doc/man3/RAND_DRBG_set_callbacks.pod
+++ b/doc/man3/RAND_DRBG_set_callbacks.pod
@@ -62,7 +62,7 @@ RAND_DRBG_set_callback_data() can be used to store a pointer to some context
 specific data, which can subsequently be retrieved by the entropy and nonce
 callbacks using RAND_DRBG_get_callback_data().
 The ownership of the context data remains with the caller, i.e., it is the
-caller's responsibility to keep it available as long as it is need by the
+caller's responsibility to keep it available as long as it is needed by the
 callbacks and free it after use.
 For more information about the the callback data see the NOTES section.
 
@@ -140,7 +140,7 @@ In this case the DRBG will automatically request an extra amount of entropy
 utilize for the nonce, following the recommendations of [NIST SP 800-90A Rev. 1],
 section 8.6.7.
 
-The callback data a rather specialized feature, because in general the
+The callback data is a rather specialized feature, because in general the
 random sources don't (and in fact, they must not) depend on any state provided
 by the DRBG.
 There are however exceptional cases where this feature is useful, most notably
