--- a/NEWS
+++ b/NEWS
@@ -10,7 +10,7 @@
       o X509 certificates signed using SHA1 are no longer allowed at security
         level 1 or higher. The default security level for TLS is 1, so
         certificates signed using SHA1 are by default no longer trusted to
-        authenticate servers.
+        authenticate servers or clients.
       o enable-crypto-mdebug and enable-crypto-mdebug-backtrace were mostly
         disabled; the project uses address sanitize/leak-detect instead.
       o Added OSSL_SERIALIZER, a generic serializer API.
