--- a/doc/man3/DH_generate_parameters.pod
+++ b/doc/man3/DH_generate_parameters.pod
@@ -2,7 +2,7 @@
 
 =head1 NAME
 
-DH_generate_parameters_ex, DH_generate_parameters, DH_generate_ffc_parameters,
+DH_generate_parameters_ex, DH_generate_parameters,
 DH_check, DH_check_params,
 DH_check_ex, DH_check_params_ex, DH_check_pub_key_ex
 - generate and check Diffie-Hellman
@@ -13,8 +13,6 @@ parameters
  #include <openssl/dh.h>
 
  int DH_generate_parameters_ex(DH *dh, int prime_len, int generator, BN_GENCB *cb);
- int DH_generate_ffc_parameters(OPENSSL_CTX *libctx, DH *dh, int bits,
-                                int qbits, int gindex, BN_GENCB *cb);
 
  int DH_check(DH *dh, int *codes);
  int DH_check_params(DH *dh, int *codes);
@@ -52,18 +50,6 @@ the BN_GENCB_call() function.
 DH_generate_parameters() is similar to DH_generate_prime_ex() but
 expects an old-style callback function; see
 L<BN_generate_prime(3)> for information on the old-style callback.
-
-DH_generate_ffc_parameters() can be used to generate FFC domain parameters that
-can be validated as per the FIPS186-4 standard. This is required for backwards
-compatibility only. An approved named group should be used instead.
-See L<DH_new_by_nid(3)> for information on named groups.
-
-B<libctx> is the library context associated with this operation.
-B<bits> is the length in bits of p.
-B<qbits> is the length in bits of q.
-B<gindex> is the index for generation and validation the value of generator g.
-See FIPS186-4 Section A.2.3 "Verifiable Canonical Generation of the
-Generator g". Use -1 for Unverifiable Generation of the generator g.
 
 DH_check_params() confirms that the B<p> and B<g> are likely enough to
 be valid.
@@ -160,7 +146,6 @@ L<DH_free(3)>
 
 DH_generate_parameters() was deprecated in OpenSSL 0.9.8; use
 DH_generate_parameters_ex() instead.
-DH_generate_ffc_parameters was added in OpenSSL 3.0.
 
 =head1 COPYRIGHT
 
