--- a/doc/man7/property.pod
+++ b/doc/man7/property.pod
@@ -117,8 +117,8 @@ Ordering of optional clauses is not significant.
 =head2 Shortcut
 
 In order to permit a more concise expression of boolean properties, there
-is one short cut: a property name alone (e.g. "default") is
-exactly equivalent to "provider=default" in both definitions and queries.
+is one short cut: a property name alone (e.g. "myproperty") is
+exactly equivalent to "myproperty=yes" in both definitions and queries.
 
 =head2 Global and Local
 
